# mini-redis-project

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 237910a71ff0_x_fix.py  29265fd63336_create_profile_table.py
src/: main.py
src/core/: database.py  redis_client.py
src/models/: profile.py
src/routers/: profileRouter.py
src/schema/: profileSchema.py
src/services/: profileService.py
src/templates/: create.html  index.html  update.html  username.html
